# dsp-meta-svc

./: .bazelignore  .bazelrc  .gitignore  .prettierrc.json  BUILD.bazel  CHANGELOG.md  LICENSE  Makefile  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  package-lock.json  package.json  rollup.config.js  tsconfig-node.json  tsconfig.json
docker/: BUILD.bazel
repository-srvc/: BUILD.bazel  express_server.ts
server/: BUILD.bazel  index.ts  request.logger.middleware.ts
services/admin/backend/api/handler/: BUILD.bazel  organization.go  project.go
services/admin/backend/api/presenter/: BUILD.bazel  organization.go  project.go  project_test.go
services/admin/backend/cmd/: BUILD.bazel  main.go
services/admin/backend/config/: BUILD.bazel  keycloak_realm_key.rsa.pub
services/admin/backend/entity/: BUILD.bazel  entity.go  error.go  organization.go  organization_test.go
services/admin/backend/entity/organization/: BUILD.bazel  error.go  organization.go  organization_test.go
services/admin/backend/entity/project/: BUILD.bazel  error.go  project.go  project_test.go
services/admin/backend/entity/user/: BUILD.bazel  error.go  user.go  user_test.go
services/admin/backend/event/: BUILD.bazel  event.go  project.go  user.go
services/admin/backend/infrastructure/repository/: BUILD.bazel  organization_inmem.go
services/admin/backend/infrastructure/repository/project/: BUILD.bazel  container_test.go  project.go  project_test.go
services/admin/backend/infrastructure/repository/user/: BUILD.bazel  container_test.go  user.go  user_test.go
services/admin/backend/service/organization/: BUILD.bazel  inmem_test.go  interface.go  service.go  service_test.go
services/admin/backend/service/project/: BUILD.bazel  inmem_test.go  interface.go  project.go  project_test.go
services/metadata/backend/: BUILD.bazel  README.md  backend.go  express_server.ts  go.mod  go.sum
services/metadata/backend/api/: BUILD.bazel  main.go
services/metadata/backend/api/handler/: BUILD.bazel  address.go  address.handler.go  organization.go  spa.go
services/metadata/backend/api/middleware/: BUILD.bazel  cors.go  metric.go  metrics.go
services/metadata/backend/api/presenter/: BUILD.bazel  address.go  address.presenter.go  address_test.go  address_test.presenter.go  organization.go
services/metadata/backend/cmd/: BUILD.bazel  main.go
services/metadata/backend/config/: BUILD.bazel  config_dev.go
services/metadata/backend/data/: @test.json  BUILD.bazel  Rome.json  _bilddatenbank-metadata.json  _bilddatenbank.json  _bilddatenbank.jsonld  _bilddatenbank.ttl  _dokubib.json  _dssl.json  _dssl.jsonld  _dssl.ttl  _rosetta-metadata.json  _rosetta.json  _rosetta.jsonld  _rosetta.ttl  _test-max-metadata.json  _test-metadata.json  _test.json  _wordweb-metadata.json  _wordweb.json  _wordweb.jsonld  _wordweb.ttl  a_test.jsonld  aura-effizienz.json  awg.json  awg.jsonld  awg.ttl  beol-metadata.json  beol.json  beol.jsonld  beol.ttl  beyondthetext.json  big-data-in-agriculture.json  big-data-in-agriculture.jsonld  big-data-in-agriculture.ttl  biz.json  bruno-manser.json  bruno-manser.jsonld  bruno-manser.ttl  cache-metadata.json  (+82 more)
services/metadata/backend/entity/: BUILD.bazel  address.entity.go  address.entity_test.go  address_test.entity.go  error.go  errors.go  organization.go  organization_test.go  person_test.go
services/metadata/backend/entity/address/: BUILD.bazel  address.go  address_test.go  errors.go
services/metadata/backend/event/: BUILD.bazel  address.event.go  address.go  event.go
services/metadata/backend/fake-backend/: BUILD.bazel  fake-backend.go
services/metadata/backend/fake-backend/data/: _bilddatenbank-metadata.json  _datenbank-metadata.json  _dokubib-metadata.json  _dssl-metadata.json  _rosetta-metadata.json  _wordweb-metadata.json  _wordweb.json  awg-metadata.json  beol-metadata.json  big-dada-in-agriculture-metadata.json  big-data-in-agriculture-metadata.json  bruno-manser-metadata.json  bruno-manser.json  cache-metadata.json  cache.json  delille-metadata.json  delille.json  drawings-metadata.json  drawings.json  hdm-metadata.json  hdm.json  limc-metadata.json  limc.json  mfmps-metadata.json  olympic-metadata.json  reforme-geneve-metadata.json  reforme-geneve.json  religious-speech-metadata.json  roud-metadata.json  roud.json  stardom-metadata.json  stardom.json  tds-metadata.json  tds.json  test-min-metadata.json
services/metadata/backend/graphql/: BUILD.bazel  gqlgen.yml  server.go
services/metadata/backend/graphql/graph/: BUILD.bazel  schema.graphqls  schema.resolvers.go
services/metadata/backend/graphql/graph/model/: BUILD.bazel
services/metadata/backend/infrastructure/repository/: BUILD.bazel  address_inmem.go  organization_badgerdb.go  organization_inmem.go
services/metadata/backend/pkg/metric/: BUILD.bazel  prometheus.go
services/metadata/backend/service/address/: BUILD.bazel  address.go  address.service.go  address.service_test.go  address_test.go  inmem_test.go  interface.go
services/metadata/backend/usecase/organization/: BUILD.bazel  inmem.go  interface.go  service.go  service_test.go
services/metadata/docker/: BUILD.bazel
services/metadata/go_ca_backend/cmd/: BUILD.bazel  main.go
services/resource/docker/: BUILD.bazel
shared/go/pkg/metric/: BUILD.bazel  interface.go  prometheus.go
shared/go/pkg/server/: BUILD.bazel  api_spa_server.go  api_spa_server_test.go
shared/go/pkg/server/testfiles/: BUILD.bazel  global.css
shared/go/pkg/valueobject/: BUILD.bazel  additional.go  additional_test.go  aggregatetype.go  canton.go  canton_test.go  country.go  country_test.go  description.go  description_test.go  email.go  email_address.go  email_address_test.go  email_test.go  familyname.go  givenname.go  identifier.go  identifier_test.go  interface.go  locality.go  locality_test.go  longname.go  longname_test.go  password.go  postalcode.go  postalcode_test.go  shortcode.go  shortcode_test.go  shortname.go  shortname_test.go  street.go  street_test.go  timestamp.go  timestamp_test.go  url.go  url_test.go  username.go
src/server/: BUILD.bazel  server.ts
(+151 files in other folders)
