package(default_visibility = ["//visibility:public"])

exports_files([
    "tsconfig.json",
])

load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

buildifier(
    name = "buildifier",
)

load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/dasch-swiss/dasch-service-platform
gazelle(name = "gazelle")

filegroup(
    name = "version",
    srcs = ["version.txt"],
)
