load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

nodejs_image(
    name = "docker",
    data = [
        "//public",
        "//repository-srvc:bin",
        "@npm//express",
    ],
    entry_point = "//repository-srvc:index.ts",
)

container_push(
    name = "push",
    image = ":docker",
    format = "Docker",
    registry = "index.docker.io",
    repository = "daschswiss/dsp-repository",
    tag = "{BUILD_SCM_TAG}"
)
