package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "server",
    srcs = glob(["*.ts"]),
    tsconfig = "//:tsconfig.json",
    data = [
        "//public",
    ],
    deps = [
        "@npm//@types",
        "@npm//express",
        "@npm//body-parser",
        "@npm//compression",
        "@npm//cors",
        "@npm//axios",
    ],
    devmode_target = "es2017",
    prodmode_target = "es2017",
    devmode_module = "commonjs",
    prodmode_module = "esnext",
)

load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

nodejs_binary(
    name = "bin",
    data = [
        ":server",
    ],
    entry_point = ":index.ts",
)
