package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
  name = "library",
  srcs = [
      "server.ts"
  ],
  tsconfig = "//:tsconfig-node.json",
  deps = [
    "@npm//express",
    "@npm//compression"
  ]
)

filegroup(
    name = "library.js",
    srcs = [":library"],
    output_group = "es5_sources",
)

nodejs_binary(
  name = "server", 
  data = [
    ":library",
    "@npm//express",
    "//public",
  ],
  entry_point = ":library.js",
)


