load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

package(default_visibility = ["//visibility:public"])

# push to dockerhub
container_push(
    name = "push",
    format = "Docker",
    image = ":image",
    registry = "index.docker.io",
    repository = "daschswiss/dsp-meta-svc",
    tag = "{BUILD_SCM_TAG}",
)

go_image(
    name = "image",
    srcs = ["backend.go"],
    data = [
        "//:version",
        "//public",
        "//services/metadata/backend/data",
    ],
    importpath = "github.com/dasch-swiss/dsp-meta-svc/services/metadata/backend",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gorilla_handlers//:handlers",
        "@com_github_gorilla_mux//:mux",
        "@com_github_snabb_sitemap//:sitemap",
    ],
)

go_binary(
    name = "cmd",
    srcs = ["backend.go"],
    data = [
        "//:version",
        "//services/metadata/backend/data",
    ],
    importpath = "github.com/dasch-swiss/dsp-meta-svc/services/metadata/backend",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gorilla_handlers//:handlers",
        "@com_github_gorilla_mux//:mux",
        "@com_github_snabb_sitemap//:sitemap",
    ],
)
