load("@io_bazel_rules_docker//container:container.bzl", "container_push")

container_push(
    name = "push",
    format = "Docker",
    image = "//services/metadata/backend/fake-backend:image",
    registry = "index.docker.io",
    repository = "daschswiss/dsp-metadata-service",
    tag = "{BUILD_SCM_TAG}",
)
