load("@io_bazel_rules_docker//container:container.bzl", "container_push")

container_push(
    name = "push",
    format = "Docker",
    image = "//services/resource/backend/api:image",
    registry = "index.docker.io",
    repository = "daschswiss/dsp-resource-service",
    tag = "{BUILD_SCM_TAG}",
)
