package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "cmd",
    srcs = ["main.go"],
    data = [
        "//public",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//services/admin/backend/api/handler",
        "//services/admin/backend/api/middleware",
        "//services/admin/backend/config",
        "//services/admin/backend/infrastructure/repository",
        "//services/admin/backend/infrastructure/repository/project",
        "//services/admin/backend/service/organization",
        "//services/admin/backend/service/project",
        "//shared/go/pkg/metric",
        # "@com_github_dgraph_io_badger_v3//:badger",
        "@com_github_gorilla_context//:context",
        "@com_github_gorilla_mux//:mux",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_github_urfave_negroni//:negroni",
        "@com_github_eventstore_eventstore_client_go//client",
    ],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "image",
    srcs = ["main.go"],
    data = [
        "//public",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//services/admin/backend/api/handler",
        "//services/admin/backend/api/middleware",
        "//services/admin/backend/config",
        "//services/admin/backend/infrastructure/repository",
        "//services/admin/backend/infrastructure/repository/project",
        "//services/admin/backend/service/organization",
        "//services/admin/backend/service/project",
        "//shared/go/pkg/metric",
        # "@com_github_dgraph_io_badger_v3//:badger",
        "@com_github_gorilla_context//:context",
        "@com_github_gorilla_mux//:mux",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_github_urfave_negroni//:negroni",
        "@com_github_eventstore_eventstore_client_go//client",
    ],
)
