load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = [
        "config_dev.go",
    ],
    data = [
        "keycloak_realm_key.rsa.pub"
    ],
    importpath = "github.com/dasch-swiss/dasch-service-platform/services/admin/backend/config",
    visibility = ["//visibility:public"],
)
