load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "entity",
    srcs = [
        "entity.go",
    ],
    importpath = "github.com/dasch-swiss/dasch-service-platform/services/admin/backend/entity",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_uuid//:uuid",
    ],
)
