package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "api",
    srcs = ["main.go"],
    data = [
        "//public",
        "//services/metadata/backend/data",
    ],
    importpath = "github.com/dasch-swiss/dasch-service-platform/services/metadata/backend/api",
    visibility = ["//visibility:public"],
    deps = [
        "//services/metadata/backend/api/handler",
        "//services/metadata/backend/api/middleware",
        "//services/metadata/backend/config",
        "//services/metadata/backend/infrastructure/repository",
        "//services/metadata/backend/usecase/organization",
        "//shared/go/pkg/metric",
        # "@com_github_dgraph_io_badger_v3//:badger",
        "@com_github_gorilla_context//:context",
        "@com_github_gorilla_mux//:mux",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_github_urfave_negroni//:negroni",
    ],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "image",
    srcs = ["main.go"],
    data = [
        "//public",
        "//services/metadata/backend/data",
    ],
    importpath = "github.com/dasch-swiss/dasch-service-platform/services/metadata/backend/api",
    visibility = ["//visibility:public"],
    deps = [
        "//services/metadata/backend/api/handler",
        "//services/metadata/backend/api/middleware",
        "//services/metadata/backend/config",
        "//services/metadata/backend/infrastructure/repository",
        "//services/metadata/backend/usecase/organization",
        "//shared/go/pkg/metric",
        # "@com_github_dgraph_io_badger_v3//:badger",
        "@com_github_gorilla_context//:context",
        "@com_github_gorilla_mux//:mux",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_github_urfave_negroni//:negroni",
    ],
)
