package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_binary(
    name = "cmd",
    srcs = ["main.go"],
    data = [
        "//public",
    ],
    importpath = "github.com/dasch-swiss/dasch-service-platform/services/metadata/backend/api",
    visibility = ["//visibility:public"],
    deps = [
        "//services/metadata/backend/api/handler",
        "//services/metadata/backend/api/middleware",
        "//services/metadata/backend/config",
        "//services/metadata/backend/infrastructure/repository",
        "//services/metadata/backend/usecase/organization",
        "//shared/go/pkg/metric",
        # "@com_github_dgraph_io_badger_v3//:badger",
        "@com_github_gorilla_context//:context",
        "@com_github_gorilla_mux//:mux",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_github_urfave_negroni//:negroni",
    ],
)

pkg_tar(
    name = "static-app",
    srcs = ["//public"],
    mode = "0755",
    package_dir = "/public",
    strip_prefix = ".",
)

go_image(
    name = "image",
    srcs = ["main.go"],
    data = [
        ":static-app",
    ],
    importpath = "github.com/dasch-swiss/dasch-service-platform/services/metadata/backend/api",
    visibility = ["//visibility:public"],
    deps = [
        "//services/metadata/backend/api/handler",
        "//services/metadata/backend/api/middleware",
        "//services/metadata/backend/config",
        "//services/metadata/backend/infrastructure/repository",
        "//services/metadata/backend/usecase/organization",
        "//shared/go/pkg/metric",
        # "@com_github_dgraph_io_badger_v3//:badger",
        "@com_github_gorilla_context//:context",
        "@com_github_gorilla_mux//:mux",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_github_urfave_negroni//:negroni",
    ],
)
