load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "entity",
    srcs = [
        "entity.go",
        "error.go",
        "organization.go",
        "person.go",
    ],
    importpath = "github.com/dasch-swiss/dasch-service-platform/services/metadata/backend/entity",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_uuid//:uuid",
    ],
)

go_test(
    name = "organization_test",
    size = "small",
    srcs = ["organization_test.go"],
    embed = [":entity"],
    visibility = ["//visibility:public"],
    deps = ["@com_github_stretchr_testify//assert"],
)
