load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "address",
    srcs = [
        "address.entity.go",
        "errors.go"
    ],
    importpath = "github.com/dasch-swiss/dsp-meta-svc/services/metadata/backend/entity",
    visibility = ["//visibility:public"],
    deps = [
        "//services/metadata/backend/event",
        "//shared/go/pkg/valueobject",
        "@com_github_google_uuid//:uuid",
    ],
)

go_test(
    name = "address_test",
    size = "small",
    srcs = ["address.entity_test.go"],
    embed = [":address"],
    visibility = ["//visibility:public"],
    deps = ["@com_github_stretchr_testify//assert"],
)
