load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "event",
    srcs = [
        "event.go",
        "addres.event.go",
    ],
    importpath = "github.com/dasch-swiss/dsp-meta-svc/services/meta/backend/event",
    visibility = ["//services/meta:__subpackages__"],
    deps = [
        "//shared/go/pkg/valueobject",
    ],
)

