package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "graphql",
    srcs = ["server.go"],
    data = [
        ":gqlgen.yml",
    ],
    importpath = "github.com/dasch-swiss/dasch-service-platform/services/metadata/backend/graphql",
    visibility = ["//visibility:public"],
    deps = [
        "//services/metadata/backend/graphql/graph",
        "//services/metadata/backend/graphql/graph/generated",
        "@com_github_99designs_gqlgen//graphql/handler:go_default_library",
        "@com_github_99designs_gqlgen//graphql/playground:go_default_library",
    ],
)
