load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "metric",
    srcs = [
        "interface.go",
        "prometheus.go",
    ],
    importpath = "github.com/dasch-swiss/dasch-service-platform/shared/go/pkg/metric",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_prometheus_client_golang//prometheus",
        "@io_bazel_rules_go//proto/wkt:any_go_proto",
    ],
)
