load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "valueobject",
    srcs = [
        "email.go",
        "identifier.go",
        "interface.go",
        "url.go",
    ],
    importpath = "github.com/dasch-swiss/dasch-service-platform/shared/go/pkg/valueobject",
    visibility = ["//visibility:public"],
)

go_test(
    name = "valueobject_test",
    size = "small",
    srcs = [
        "email_test.go",
        "identifier_test.go",
        "url_test.go",
    ],
    embed = [":valueobject"],
    visibility = ["//visibility:public"],
    deps = ["@com_github_stretchr_testify//assert"],
)
