load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "valueobject",
    srcs = [
        "aggregatetype.go",
        "description.go",
        "email.go",
        "familyname.go",
        "givenname.go",
        "identifier.go",
        "interface.go",
        "longname.go",
        "password.go",
        "shortcode.go",
        "shortname.go",
        "timestamp.go",
        "url.go",
        "username.go",
    ],
    importpath = "github.com/dasch-swiss/dasch-service-platform/shared/go/pkg/valueobject",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gofrs_uuid//:go_default_library",
    ],
)

go_test(
    name = "valueobject_test",
    size = "small",
    srcs = [
        "email_test.go",
        "identifier_test.go",
        "timestamp_test.go",
        "url_test.go",
        "description_test.go",
        "longname_test.go",
        "shortcode_test.go",
        "shortname_test.go",
    ],
    embed = [":valueobject"],
    visibility = ["//visibility:public"],
    deps = ["@com_github_stretchr_testify//assert"],
)
