load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "valueobject",
    srcs = [
        "additional.go",
        "aggregatetype.go",
        "canton.go",
        "country.go",
        "description.go",
        "email.go",
        "familyname.go",
        "givenname.go",
        "identifier.go",
        "interface.go",
        "locality.go",
        "longname.go",
        "password.go",
        "postalcode.go",
        "shortcode.go",
        "shortname.go",
        "street.go",
        "timestamp.go",
        "url.go",
        "username.go",
    ],
    importpath = "github.com/dasch-swiss/dsp-meta-svc/shared/go/pkg/valueobject",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gofrs_uuid//:go_default_library",
    ],
)

go_test(
    name = "valueobject_test",
    size = "small",
    srcs = [
        "additional_test.go",
        "canton_test.go",
        "country_test.go",
        "description_test.go",
        "email_test.go",
        "identifier_test.go",
        "locality_test.go",
        "longname_test.go",
        "postalcode_test.go",
        "shortcode_test.go",
        "shortname_test.go",
        "street_test.go",
        "timestamp_test.go",
        "url_test.go",
    ],
    embed = [":valueobject"],
    visibility = ["//visibility:public"],
    deps = ["@com_github_stretchr_testify//assert"],
)
