load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "handler",
    srcs = [
        "organization.go",
        "project.go",
    ],
    importpath = "github.com/dasch-swiss/dasch-service-platform/services/admin/backend/api/handler",
    visibility = ["//visibility:public"],
    deps = [
        "//services/admin/backend/api/presenter",
        "//services/admin/backend/entity",
        "//services/admin/backend/entity/organization",
        "//services/admin/backend/entity/project",
        "//services/admin/backend/service/organization",
        "//services/admin/backend/service/project",
        "//shared/go/pkg/valueobject",
        "@com_github_gorilla_mux//:go_default_library",
        "@com_github_urfave_negroni//:go_default_library",
    ],
)
