load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "presenter",
    srcs = [
        "organization.go",
        "project.go"
    ],
    importpath = "github.com/dasch-swiss/dasch-service-platform/services/admin/backend/api/presenter",
    visibility = ["//visibility:public"],
    deps = [
        "//services/admin/backend/entity",
        "//shared/go/pkg/valueobject"
    ],
)
