load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "presenter",
    srcs = [
        "organization.go",
        "project.go",
    ],
    importpath = "github.com/dasch-swiss/dasch-service-platform/services/admin/backend/api/presenter",
    visibility = ["//visibility:public"],
    deps = [
        "//services/admin/backend/entity",
        "//shared/go/pkg/valueobject",
    ],
)

go_test(
    name = "project_test",
    size = "small",
    srcs = [
        "project_test.go",
    ],
    embed = [":presenter"],
    visibility = ["//visibility:public"],
    deps = ["@com_github_stretchr_testify//assert"],
)
