load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "organization",
    srcs = [
        "error.go",
        "organization.go",
    ],
    importpath = "github.com/dasch-swiss/dasch-service-platform/services/admin/backend/entity/organization",
    visibility = ["//visibility:public"],
    deps = [
        "//services/admin/backend/entity",
        "//services/admin/backend/event",
        "//shared/go/pkg/valueobject",
        "@com_github_google_uuid//:uuid",
    ],
)

go_test(
    name = "organization_test",
    size = "small",
    srcs = [
        "organization_test.go",
    ],
    embed = [":organization"],
    visibility = ["//visibility:public"],
    deps = ["@com_github_stretchr_testify//assert"],
)
