load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "user",
    srcs = [
        "error.go",
        "user.go",
    ],
    importpath = "github.com/dasch-swiss/dasch-service-platform/services/admin/backend/entity/user",
    visibility = ["//visibility:public"],
    deps = [
        "//services/admin/backend/event",
        "//shared/go/pkg/valueobject",
        "@com_github_google_uuid//:uuid",
    ],
)

go_test(
    name = "user_test",
    size = "small",
    srcs = [
        "user_test.go",
    ],
    embed = [":user"],
    visibility = ["//visibility:public"],
    deps = ["@com_github_stretchr_testify//assert"],
)
