load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "repository",
    srcs = [
        # "organization_badgerdb.go",
        "organization_inmem.go"
    ],
    importpath = "github.com/dasch-swiss/dasch-service-platform/services/admin/backend/infrastructure/repository",
    visibility = ["//visibility:public"],
    deps = [
        "//services/admin/backend/entity",
        # "@com_github_dgraph_io_badger_v3//:badger",
        # "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
