load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "repository",
    srcs = [
        "organization_inmem.go"
    ],
    importpath = "github.com/dasch-swiss/dasch-service-platform/services/admin/backend/infrastructure/repository",
    visibility = ["//visibility:public"],
    deps = [
        "//services/admin/backend/entity",
        "//services/admin/backend/entity/organization",
    ],
)
