load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "organization",
    srcs = [
        "interface.go",
        "service.go",
    ],
    importpath = "github.com/dasch-swiss/dasch-service-platform/services/admin/backend/service/organization",
    visibility = ["//visibility:public"],
    deps = [
        "//services/admin/backend/entity",
        "//services/admin/backend/entity/organization",
    ],
)

go_test(
    name = "service_test",
    size = "small",
    srcs = [
        "inmem_test.go",
        "service_test.go",
    ],
    embed = [":organization"],
    visibility = ["//visibility:public"],
    deps = [
        "//services/admin/backend/entity",
        "//services/admin/backend/entity/organization",
        "@com_github_stretchr_testify//assert",
    ],
)
