load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "project",
    srcs = [
        "interface.go",
        "project.go",
    ],
    importpath = "github.com/dasch-swiss/dasch-service-platform/services/admin/backend/service/project",
    visibility = ["//services/admin/backend:__subpackages__"],
    deps = [
        "//services/admin/backend/entity/project",
        "//shared/go/pkg/valueobject",
    ],
)

go_test(
    name = "project_test",
    size = "small",
    srcs = [
        "inmem_test.go",
        "project_test.go",
    ],
    embed = [":project"],
    visibility = ["//visibility:private"],
    deps = [
        "//services/admin/backend/event",
        "@com_github_gofrs_uuid//:go_default_library",
        "@com_github_stretchr_testify//assert",
    ],
)
